# tokey

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/auth/: browser_auth.rs  chrome_auth.rs  google_oauth.rs  mod.rs  oauth.rs  pkce.rs
src/cli/: commands.rs
src/provider/: google.rs  mod.rs  slack.rs
src/storage/: mod.rs  store.rs  types.rs
