[package]
name = "tokey"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokey"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth + local server
tiny_http = "0.12"
url = "2"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Config
dirs = "5"
toml = "0.8"

# Time handling
chrono = "0.4"

# Browser automation
headless_chrome = "1.0"
